# PFO-CP

./: .gitignore  Makefile  README.md  app.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  test.py
.docker/clickhouse/: init-clickhouse.sql
.docker/clickhouse/config/: config.xml  users.xml
.docker/nginx/: nginx.conf
configs/: .env.example  Environment.py  Minio.py  YandexGPT.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Body.css  Body.tsx  Header.tsx
ml/: chunk_example.py  chunkers.py  constants.py  documents.py  embedders.py  indexing.py  lifespan.py  models.py
ml/classificators/: toxic_classifier.py
repositories/: clickhouse.py  ml.py
repositories/mixins/: crud.py
routing/v1/: ml.py
schemas/: clickhouse.py
services/: minio.py  ml.py
services/mixins/: crud.py
utils/: types.py
